- 25/05/2022
82. svscan.c: use DISABLE_RUN env variable to disable svscan from using /run
20/06/2022
83. run_init.c: fixed usage of . for supervised directory
84. minisvc.in: Fixes for OSX
- 01/07/2022
85. instcheck.in: common instcheck for daemontools, ucspi-tcp, indimail-mta
- 03/07/2022
86. supervise.c: open supervise/ok in write blocked mode when waiting for a
    service

* Sunday 14 February 2021 07:46:33 PM IST
Release 1.0 Start 09/10/2020
- 19/09/2020
01. exploit svscan as session leader. Terminate all children using svc -G
02. svcscan_rc: rc startup script for FreeBSD
03. qmailctl: use daemon to start svscan in supervised mode
- 22/09/2020
04. qmailctl: removed use of initsvc for start/stop
- 27/09/2020
05. new command svwait to wait for supervise service to come up
- 02/10/2020
06. install indimail.plist in shareddir/boot
- 03/10/2020
07. svctool, svwait: fix date command syntax for Darwin, FreeBSD
08. indimail.plist: service directory on Darwin changed to
    /usr/local/etc/indimail/service
- 04/10/2020
09. svctool: renamed launchd unit file indimail.plist to svscan.plist
    create /service link in /etc/synthetic.conf for Darwin
    create /var/indimail/inquery directory
    removed hardcoded directory for svwait in inlookup, pwdlookup service
10. hier.c, indimail-mta.spec, Makefile: renamed launchd unit file indimail.plist
    to svscan.plist
11. svwait: replace builtin echo with /bin/echo -n (for Darwin)
- 06/10/2020
12. svctool -freebsd: remove svscan config/rc file with --config=rm-boot
- 08/10/2020
13. svscan, supervise, svc, svstat, svok - use /run or /var/run on systems
    that support it
14. Makefile: added run_init.o object for svc, svstat, svok
15. Makefile: use conf-runfs to configure daemontools to use /run, /var/run
- 09/10/2020
16. svscan.c, qmailctl, svscan_rc - renamed svscan.pid to .svscan.pid
- 11/10/2020
17. added man page for docker-entrypoint
- 16/10/2020
18. replaced absolute paths with relative path in services to make them work