@@ -82,3 +82,4 @@ openrc
 BIN
 INPUT
 svscan_rc
+set-network-wait
