@@ -5,3 +5,4 @@
 f:::0755:/:svscanboot:svscanboot
 f:::0755:/:instcheck.daemontools:instcheck
 f:::0755:/:installer:installer
+f:::0755:/:set-network-wait:set-network-wait
