@@ -1,1 +1,1 @@
-it += daemontools.spec PKGBUILD inotify
+it += daemontools.spec PKGBUILD inotify set-network-wait
