@@ -200,6 +200,9 @@ o svscan: added AUTOSCAN feature (which was actually part of the original
 - 03/07/2022
 86. supervise.c: open supervise/ok in write blocked mode when waiting for a
     service
+- 13/07/2022
+87. added set-network-wait for svscan systemd service to wait till network is
+    up.
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
